--- a/core/core.cabal
+++ b/core/core.cabal
@@ -4,51 +4,37 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 
-name:           check-check-backend
+name:           core
 version:        0.1.0.0
 build-type:     Simple
 
-executable check-check-backend-exe
-  main-is: Main.hs
-  other-modules:
-      App
-      InitDb
-      Receipts.API
+library
+  exposed-modules:
       Receipts.Domain.Receipt
       Receipts.Domain.ReceiptItem
-      Receipts.GetReceipt.Endpoint
       Receipts.GetReceipt.Implementation
       Receipts.Infrastructure.Fetching
       Receipts.Infrastructure.Persistence
+      Shared.Persistence
+      Shared.JSON
+  other-modules:
       Receipts.MonadClasses.ReceiptsFetching
       Receipts.MonadClasses.ReceiptsRepository
       Shared.ByteStringParsableEnum
-      Shared.DomainTypes
-      Shared.JSON
-      Shared.Persistence
       Shared.TuppledFieldsOptics
-      Shared.Types.Internal
-      Shared.Types.Positive
-      Shared.Types.TextLenRange
-      Shared.Types.TextMaxLen
-      Shared.Types.TextMinLen
-      Paths_check_check_backend
+      Paths_core
   hs-source-dirs:
-      app
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+      src
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       aeson
     , base >=4.7 && <5
     , bytestring
-    , dotenv
     , http-conduit
     , mtl
     , optics
     , postgresql-simple
-    , servant-server
+    , smart-primitives
     , text
     , uuid
-    , wai
-    , wai-cors
-    , warp
   default-language: Haskell2010
