--- a/core/core.cabal
+++ b/core/core.cabal
@@ -10,31 +10,19 @@ build-type:     Simple
 
 library
   exposed-modules:
-      Receipts.Domain.Receipt
-      Receipts.Domain.ReceiptItem
-      Receipts.GetReceipt.Implementation
-      Receipts.Infrastructure.Fetching
-      Receipts.Infrastructure.Persistence
-      Shared.Persistence
-      Shared.JSON
+      Core.Receipts.Domain.Receipt
+      Core.Receipts.Domain.ReceiptItem
+      Core.Receipts.GetReceipt
+      Core.Receipts.MonadClasses.Fetching
+      Core.Receipts.MonadClasses.Repository
   other-modules:
-      Receipts.MonadClasses.ReceiptsFetching
-      Receipts.MonadClasses.ReceiptsRepository
-      Shared.ByteStringParsableEnum
-      Shared.TuppledFieldsOptics
       Paths_core
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      aeson
-    , base >=4.7 && <5
-    , bytestring
-    , http-conduit
-    , mtl
+      base
     , optics
-    , postgresql-simple
     , smart-primitives
     , text
-    , uuid
   default-language: Haskell2010
