--- a/optics-utils/optics-utils.cabal
+++ b/optics-utils/optics-utils.cabal
@@ -4,28 +4,19 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 
-name:           smart-primitives
+name:           optics-utils
 version:        0.1.0.0
 build-type:     Simple
 
 library
   exposed-modules:
-      SmartPrimitives.Positive
-      SmartPrimitives.TextLenRange
-      SmartPrimitives.TextMaxLen
-      SmartPrimitives.TextMinLen
+      Optics.Tuppled
   other-modules:
-      SmartPrimitives.Internal
-      Paths_smart_primitives
+      Paths_optics_utils
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      aeson
-    , base
-    , bytestring
+      base
     , optics
-    , postgresql-simple
-    , servant-server
-    , text
   default-language: Haskell2010
