--- a/web-api/web-api.cabal
+++ b/web-api/web-api.cabal
@@ -20,11 +20,12 @@ executable web-api
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       aeson
-    , base >=4.7 && <5
+    , base
     , bytestring
     , core
     , dotenv
     , http-conduit
+    , infrastructure
     , mtl
     , optics
     , postgresql-simple
