feat: connection pool

--- a/web-api/web-api.cabal
+++ b/web-api/web-api.cabal
@@ -29,6 +29,7 @@ executable web-api
     , mtl
     , optics
     , postgresql-simple
+    , resource-pool
     , servant-server
     , text
     , uuid
