chore: refactored to proper DI

--- a/core/core.cabal
+++ b/core/core.cabal
@@ -22,6 +22,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base
+    , mtl
     , optics
     , smart-primitives
     , text
