--- a/smart-primitives/smart-primitives.cabal
+++ b/smart-primitives/smart-primitives.cabal
@@ -11,6 +11,7 @@ build-type:     Simple
 library
   exposed-modules:
       SmartPrimitives.Positive
+      SmartPrimitives.NonNegative
       SmartPrimitives.TextLenRange
       SmartPrimitives.TextMaxLen
       SmartPrimitives.TextMinLen
