--- a/core/core.cabal
+++ b/core/core.cabal
@@ -10,22 +10,33 @@ build-type:     Simple
 
 library
   exposed-modules:
+      Core.Common.Domain.Currency
+      Core.Common.MonadClasses.MonadUUID
+      Core.Common.MonadClasses.MonadUTCTime
+      Core.Common.Operators
+      Core.Receipts.Get
       Core.Receipts.Domain.Receipt
       Core.Receipts.Domain.ReceiptItem
-      Core.Receipts.GetReceipt
       Core.Receipts.MonadClasses.Fetching
       Core.Receipts.MonadClasses.Repository
-  other-modules:
-      Core.Common.MonadClasses.MonadUUID
-      Core.Groups.AddGoodsToGroup
-      Core.Groups.CreateGroup
-      Core.Groups.Domain.Budget
-      Core.Groups.Domain.Group
-      Core.Groups.Domain.GroupId
-      Core.Groups.Domain.Primitives
-      Core.Groups.MonadClasses.Repository
       Core.Users.Domain.User
       Core.Users.Domain.UserId
+      Core.Users.Domain.UserType
+      Core.Users.Domain.Budget
+      Core.Users.Domain.Primitives
+      Core.Users.MonadClasses.Repository
+      Core.Users.CreateSingle
+      Core.Users.CreateGroup
+      Core.Users.Get
+      Core.Users.Requests.Domain.Request
+      Core.Users.Requests.Domain.RequestId
+      Core.Users.Requests.Domain.RequestStatus
+      Core.Users.Requests.MonadClasses.Repository
+      Core.Users.Requests.SendList
+      Core.Users.Requests.SendReceiptItems
+      Core.Users.Requests.GetIncoming
+  other-modules:
+      Core.Users.Common.CreateBudgetData
       Paths_core
   hs-source-dirs:
       src
@@ -36,5 +47,6 @@ library
     , optics
     , smart-primitives
     , text
+    , time
     , uuid
   default-language: Haskell2010
