--- a/web-api/package.yaml
+++ b/web-api/package.yaml
@@ -7,6 +7,7 @@ executable:
   dependencies:
   - core
   - infrastructure
+  - smart-primitives
 
   - base
   - servant-server
@@ -23,6 +24,7 @@ executable:
   - text
   - optics
   - resource-pool
+  - time
 
   ghc-options:
   - -threaded
