chore: moved budget to its own modules

--- a/core/core.cabal
+++ b/core/core.cabal
@@ -22,12 +22,13 @@ library
       Core.Users.Domain.User
       Core.Users.Domain.UserId
       Core.Users.Domain.UserType
-      Core.Users.Domain.Budget
       Core.Users.Domain.Primitives
       Core.Users.MonadClasses.Repository
       Core.Users.CreateSingle
       Core.Users.CreateGroup
       Core.Users.Get
+      Core.Users.Budget.Domain.Budget
+      Core.Users.Budget.Create
       Core.Users.Requests.Domain.Request
       Core.Users.Requests.Domain.RequestId
       Core.Users.Requests.Domain.RequestStatus
@@ -36,7 +37,6 @@ library
       Core.Users.Requests.SendReceiptItems
       Core.Users.Requests.GetIncoming
   other-modules:
-      Core.Users.Common.CreateBudgetData
       Paths_core
   hs-source-dirs:
       src
