--- a/core/core.cabal
+++ b/core/core.cabal
@@ -29,8 +29,7 @@ library
       Core.Users.Get
       Core.Users.Budget.Domain.Budget
       Core.Users.Budget.Create
-      Core.Users.Budget.AddMoney
-      Core.Users.Budget.SpendMoney
+      Core.Users.Budget.ApplyDelta
       Core.Users.Requests.Domain.Request
       Core.Users.Requests.Domain.RequestId
       Core.Users.Requests.Domain.RequestStatus
