--- a/core/core.cabal
+++ b/core/core.cabal
@@ -37,6 +37,8 @@ library
       Core.Users.Requests.SendList
       Core.Users.Requests.SendReceiptItems
       Core.Users.Requests.GetIncoming
+      Core.Users.Requests.MarkCompleted
+      Core.Users.Requests.PayFor
   other-modules:
       Paths_core
   hs-source-dirs:
