feat: api request completion

--- a/web-api/web-api.cabal
+++ b/web-api/web-api.cabal
@@ -21,6 +21,7 @@ executable web-api
       WebAPI.Users.CreateSingle
       WebAPI.Users.Get
       WebAPI.Users.IncomingRequests
+      WebAPI.Users.IncomingRequests.Complete
       WebAPI.Users.IncomingRequests.GetMany
       WebAPI.Users.OutgoingRequests
       WebAPI.Users.OutgoingRequests.Send
