--- a/web-api/package.yaml
+++ b/web-api/package.yaml
@@ -20,6 +20,7 @@ executable:
   - warp
   - dotenv
   - bytestring
+  - base64-bytestring
   - postgresql-simple
   - mtl
   - uuid
@@ -27,6 +28,8 @@ executable:
   - optics
   - resource-pool
   - time
+  - jose
+  - base16
 
   ghc-options:
   - -threaded
