--- a/web-api/web-api.cabal
+++ b/web-api/web-api.cabal
@@ -20,13 +20,13 @@ executable web-api
       WebAPI.Users.Budget
       WebAPI.Users.Budget.ApplyDelta
       WebAPI.Users.Budget.Get
-      WebAPI.Users.CreateSingle
       WebAPI.Users.Get
       WebAPI.Users.IncomingRequests
       WebAPI.Users.IncomingRequests.Complete
       WebAPI.Users.IncomingRequests.GetMany
       WebAPI.Users.OutgoingRequests
       WebAPI.Users.OutgoingRequests.Send
+      WebAPI.Users.Register
       Paths_web_api
   hs-source-dirs:
       src
