--- a/core/core.cabal
+++ b/core/core.cabal
@@ -25,6 +25,7 @@ library
       Core.Users.Domain.Primitives
       Core.Users.MonadClasses.Repository
       Core.Users.CreateSingle
+      Core.Users.CreateExistingSingle
       Core.Users.CreateGroup
       Core.Users.Get
       Core.Users.Budget.Domain.Budget
