feat: copied users api to groups (some safety is lacking since I want to finish this quickly)

--- a/contracts/package.yaml
+++ b/contracts/package.yaml
@@ -4,6 +4,12 @@ library:
   source-dirs: src
   exposed-modules:
     - CheckCheck.Contracts.API
+    - CheckCheck.Contracts.Users
+    - CheckCheck.Contracts.Users.Budget
+    - CheckCheck.Contracts.Users.OutgoingRequests
+    - CheckCheck.Contracts.Users.IncomingRequests
+    - CheckCheck.Contracts.Groups
+    - CheckCheck.Contracts.Receipts
 
   dependencies:
   - smart-primitives
