--- a/core/package.yaml
+++ b/core/package.yaml
@@ -24,6 +24,7 @@ library:
     - Core.Users.CreateGroup
     - Core.Users.GetSingle
     - Core.Users.GetGroup
+    - Core.Users.GetAllGroups
 
     - Core.Users.Budget.Domain.Budget
     - Core.Users.Budget.Create
