--- a/core/package.yaml
+++ b/core/package.yaml
@@ -17,6 +17,7 @@ library:
     - Core.Users.Domain.User
     - Core.Users.Domain.UserId
     - Core.Users.Domain.UserType
+    - Core.Users.Domain.UserContact
     - Core.Users.Domain.Primitives
     - Core.Users.MonadClasses.Repository
     - Core.Users.CreateSingle
@@ -25,6 +26,7 @@ library:
     - Core.Users.GetSingle
     - Core.Users.GetGroup
     - Core.Users.GetAllGroups
+    - Core.Users.GetContacts
 
     - Core.Users.Budget.Domain.Budget
     - Core.Users.Budget.Create
