--- a/core/core.cabal
+++ b/core/core.cabal
@@ -31,7 +31,8 @@ library
       Core.Users.GetSingle
       Core.Users.GetGroup
       Core.Users.GetAllGroups
-      Core.Users.GetContacts
+      Core.Users.Contacts.GetAll
+      Core.Users.Contacts.Create
       Core.Users.Budget.Domain.Budget
       Core.Users.Budget.Create
       Core.Users.Budget.ApplyDelta
