--- a/core/package.yaml
+++ b/core/package.yaml
@@ -26,7 +26,9 @@ library:
     - Core.Users.GetSingle
     - Core.Users.GetGroup
     - Core.Users.GetAllGroups
-    - Core.Users.GetContacts
+
+    - Core.Users.Contacts.GetAll
+    - Core.Users.Contacts.Create
 
     - Core.Users.Budget.Domain.Budget
     - Core.Users.Budget.Create
