--- a/core/package.yaml
+++ b/core/package.yaml
@@ -29,6 +29,7 @@ library:
 
     - Core.Users.Contacts.GetAll
     - Core.Users.Contacts.Create
+    - Core.Users.Contacts.Delete
 
     - Core.Users.Budget.Domain.Budget
     - Core.Users.Budget.Create
