--- a/infrastructure/package.yaml
+++ b/infrastructure/package.yaml
@@ -3,6 +3,7 @@ version: 0.1.0.0
 library:
   source-dirs: src
   exposed-modules:
+    - Infrastructure
     - Infrastructure.Common.Persistence
     - Infrastructure.Receipts.Fetching
     - Infrastructure.Receipts.PGRepository
