refactor: got rid of all warnings

--- a/contracts/contracts.cabal
+++ b/contracts/contracts.cabal
@@ -22,7 +22,7 @@ library
       Paths_contracts
   hs-source-dirs:
       src
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wredundant-constraints
+  ghc-options: -Wno-partial-fields -Wcompat -Widentities -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wredundant-constraints
   build-depends:
       aeson
     , base
