feat: and huge telegram bot refactor

--- a/telegram-bot/telegram-bot.cabal
+++ b/telegram-bot/telegram-bot.cabal
@@ -12,6 +12,7 @@ executable telegram-bot
   main-is: Main.hs
   other-modules:
       AuthServiceClient
+      ClientMUtils
       Clients
       Paths_telegram_bot
   hs-source-dirs:
