feat: selecting request recipient

--- a/telegram-bot/telegram-bot.cabal
+++ b/telegram-bot/telegram-bot.cabal
@@ -12,8 +12,8 @@ executable telegram-bot
   main-is: Main.hs
   other-modules:
       AuthServiceClient
+      BackendClient
       ClientMUtils
-      Clients
       Paths_telegram_bot
   hs-source-dirs:
       src
