--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,11 @@ services:
       - "8080:8080"
     networks:
       - app-network
-    volumes:
-      - ./.env:/.env
+    environment:
+      BACKEND_BASE_URL:
+      AUTH_BASE_URL:
+      TELEGRAM_BOT_TOKEN:
+      AUTH_API_KEY:
     depends_on:
       db:
         condition: service_healthy
@@ -18,11 +21,9 @@ services:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql/data
     networks:
       - app-network
-    ports:
-      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 5s
@@ -30,7 +31,7 @@ services:
       retries: 5
 
 volumes:
-  postgres_data:
+  postgres:
 
 networks:
   app-network:
