--- a/telegram-bot/telegram-bot.cabal
+++ b/telegram-bot/telegram-bot.cabal
@@ -14,6 +14,7 @@ executable telegram-bot
       AuthServiceClient
       BackendClient
       ClientMUtils
+      Orphan
       Paths_telegram_bot
   hs-source-dirs:
       src
@@ -24,7 +25,6 @@ executable telegram-bot
     , bytestring
     , containers
     , contracts
-    , dotenv
     , http-client
     , jose
     , mtl
