--- a/telegram-bot/telegram-bot.cabal
+++ b/telegram-bot/telegram-bot.cabal
@@ -20,6 +20,7 @@ executable telegram-bot
       Telegram.Bot.FSA
       Telegram.Bot.FSA.Transitions.AddContact
       Telegram.Bot.FSA.Transitions.CancelSelectingRequestRecipient
+      Telegram.Bot.FSA.Transitions.CancelViewingReceipt
       Telegram.Bot.FSA.Transitions.Id
       Telegram.Bot.FSA.Transitions.SelectReceiptItem
       Telegram.Bot.FSA.Transitions.SelectRequestRecipient
