chore: moved contracts and smart-primitives packages out

--- a/telegram-bot/telegram-bot.cabal
+++ b/telegram-bot/telegram-bot.cabal
@@ -37,8 +37,8 @@ executable telegram-bot
       aeson
     , base
     , bytestring
+    , check-check-backend-contracts
     , containers
-    , contracts
     , http-client
     , jose
     , mtl
