--- a/telegram-bot/package.yaml
+++ b/telegram-bot/package.yaml
@@ -5,7 +5,7 @@ executable:
   source-dirs: src
 
   dependencies:
-  - contracts
+  - check-check-backend-contracts
   - smart-primitives
 
   - base
