chore: migrated to haskell-flake

--- a/core/core.cabal
+++ b/core/core.cabal
@@ -1,9 +1,4 @@
-cabal-version: 1.12
-
--- This file has been generated from package.yaml by hpack version 0.37.0.
---
--- see: https://github.com/sol/hpack
-
+cabal-version:  3.0
 name:           core
 version:        0.1.0.0
 build-type:     Simple
@@ -59,4 +54,4 @@ library
     , text
     , time
     , uuid
-  default-language: Haskell2010
+  default-language: GHC2021
