--- a/web-api/web-api.cabal
+++ b/web-api/web-api.cabal
@@ -1,9 +1,4 @@
-cabal-version: 1.12
-
--- This file has been generated from package.yaml by hpack version 0.37.0.
---
--- see: https://github.com/sol/hpack
-
+cabal-version:  3.0
 name:           web-api
 version:        0.1.0.0
 build-type:     Simple
@@ -73,4 +68,4 @@ executable web-api
     , wai
     , wai-cors
     , warp
-  default-language: Haskell2010
+  default-language: GHC2021
