refactor: separated budget and requests endpoints

--- a/web-api/web-api.cabal
+++ b/web-api/web-api.cabal
@@ -8,6 +8,8 @@ executable web-api
   other-modules:
       WebAPI
       WebAPI.AppM
+      WebAPI.Budget
+      WebAPI.Requests
       Paths_web_api
   hs-source-dirs:
       src
